# venueflow-ai

./: .env  README.md  pyproject.toml
app/: __init__.py  cli.py  main.py
app/agents/: __init__.py  base.py  flip_coach.py  judge.py  opponent.py  strategist.py
app/api/: schemas.py
app/core/: __init__.py  config.py  models.py  parsing.py
app/providers/: base.py  factory.py  mock.py  openai_provider.py
app/services/: __init__.py  orchestrator.py  scoring.py
app/static/: app.css  app.js  index.html
app/static/app/static/: app.css  app.js
multi_agent_genai_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_orchestrator.py
venueflow_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
